--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "description": "Exercise code for sicp-js",
   "main": "index.js",
+  "module": "es2015",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
